# vecmodel

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  pyproject.toml
.github/workflows/: github_build.yml  github_ci.yml
src/vecmodel/: __init__.py  __version__.py
tests/: test_dummy.py
