[project]
name = "vecmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "HungLM1506", email = "leminhhung933@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
vecmodel = "vecmodel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["lint>=1.2.1", "mypy>=1.16.1", "pytest>=8.4.1", "ruff>=0.12.3"]
