[project]
name = "vecmodel"
version = "0.1.0"
description = "A model-based, ORM-inspired abstraction for vector databases."
readme = "README.md"
authors = [{ name = "HungLM1506", email = "leminhhung933@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "pytest-pretty>=1.3.0",
  "ruff>=0.12.3",
]
